--- a/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
@@ -923,7 +923,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:490
 msgid "The above sequence of commands does the following:"
-msgstr ""
+msgstr "上記の一連のコマンドは、次のような動作をします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:492
@@ -1230,7 +1230,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:653
 #, no-wrap
 msgid "Example of multiple build item usage"
-msgstr ""
+msgstr "マルチビルドアイテムの使用例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:668
@@ -1347,7 +1347,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:739
 #, no-wrap
 msgid "Example of an empty build item"
-msgstr ""
+msgstr "空のビルドアイテムの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:745
@@ -2730,7 +2730,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1428
 #, no-wrap
 msgid "RecorderContext"
-msgstr ""
+msgstr "RecorderContext"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1434
@@ -2821,12 +2821,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1483
 msgid "Import the `quarkus-smallrye-health-spi` library in your deployment module."
-msgstr ""
+msgstr "デプロイメントモジュールに `quarkus-smallrye-health-spi` ライブラリをインポートします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1484
 msgid "Add a build step in your deployment module that produces a `HealthBuildItem`."
-msgstr ""
+msgstr "デプロイメントモジュールに、 `HealthBuildItem` を生成するビルドステップを追加します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1485
@@ -3771,7 +3771,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1997
 #, no-wrap
 msgid "`io.quarkus.deployment.builditem.nativeimage.NativeImageResourceBuildItem`"
-msgstr ""
+msgstr "`io.quarkus.deployment.builditem.nativeimage.NativeImageResourceBuildItem`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1999
@@ -3804,18 +3804,18 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2006
 #, no-wrap
 msgid "`io.quarkus.deployment.builditem.nativeimage.NativeImageSystemPropertyBuildItem`"
-msgstr ""
+msgstr "`io.quarkus.deployment.builditem.nativeimage.NativeImageSystemPropertyBuildItem`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2008
 msgid "A system property that will be set at native executable build time."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルのビルド時に設定されるシステムプロパティです。"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2009
 #, no-wrap
 msgid "`io.quarkus.deployment.builditem.nativeimage.NativeImageResourceBundleBuildItem`"
-msgstr ""
+msgstr "`io.quarkus.deployment.builditem.nativeimage.NativeImageResourceBundleBuildItem`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2011
@@ -3826,7 +3826,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2012
 #, no-wrap
 msgid "`io.quarkus.deployment.builditem.nativeimage.ReflectiveClassBuildItem`"
-msgstr ""
+msgstr "`io.quarkus.deployment.builditem.nativeimage.ReflectiveClassBuildItem`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2014
@@ -3837,7 +3837,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2015
 #, no-wrap
 msgid "`io.quarkus.deployment.builditem.nativeimage.RuntimeInitializedClassBuildItem`"
-msgstr ""
+msgstr "`io.quarkus.deployment.builditem.nativeimage.RuntimeInitializedClassBuildItem`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2017
@@ -3848,7 +3848,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2018
 #, no-wrap
 msgid "`io.quarkus.deployment.builditem.nativeimage.NativeImageConfigBuildItem`"
-msgstr ""
+msgstr "`io.quarkus.deployment.builditem.nativeimage.NativeImageConfigBuildItem`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2020
@@ -4078,7 +4078,7 @@ msgstr "フィーチャーは、 `FeatureBuildItem` を生成する link:#Build 
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2115
 #, no-wrap
 msgid "TestProcessor#feature()"
-msgstr ""
+msgstr "TestProcessor#feature()"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2122
@@ -4143,7 +4143,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2162
 msgid "Extensions can consume registered capabilities using the `Capabilities` build item:"
-msgstr ""
+msgstr "エクステンションは、 `Capabilities` ビルドアイテムを使用して、登録されたケイパビリティを消費することができます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2163
@@ -4263,12 +4263,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2222
 #, no-wrap
 msgid "Parsing Config to Objects"
-msgstr ""
+msgstr "コンフィグをオブジェクトにパースする"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2224
 msgid "One of the main things an extension is likely to do is completely separate the configuration phase of behavior from the runtime phase. Frameworks often do parsing/load of configuration on startup that can be done during build time to both reduce the runtime dependencies on frameworks like xml parsers as well as reducing the startup time the parsing incurs."
-msgstr ""
+msgstr "エクステンションの主な目的の1つは、動作の設定段階を実行段階から完全に分離することです。フレームワークは起動時に設定の解析や読み込みを行うことが多いですが、これをビルド時に行うことで、xmlパーサーなどのフレームワークへの実行時の依存を減らし、解析にかかる起動時間を短縮することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2226
@@ -4340,7 +4340,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2264
 msgid "If your extension defines annotations or interfaces that mark beans needing to be processed, you can locate these beans using the Jandex API, a Java annotation indexer and offline reflection library. The following `TestProcessor#scanForBeans` method shows how to find the beans annotated with our `@TestAnnotation` that also implement the `IConfigConsumer` interface:"
-msgstr ""
+msgstr "エクステンションが、処理が必要なBeanをマークするアノテーションやインターフェースを定義している場合、Javaアノテーション・インデクサーとオフライン・リフレクション・ライブラリであるJandex APIを使って、これらのBeanを見つけることができます。以下の `TestProcessor#scanForBeans` メソッドは、 `IConfigConsumer` インターフェースも実装している `@TestAnnotation` でアノテーションされたビーンを見つける方法を示しています。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2265
