--- a/l10n/po/ja_JP/_versions/main/guides/stork.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork.adoc.po
@@ -155,7 +155,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork.adoc:69
 #, no-wrap
 msgid "Discovery and Selection of services"
-msgstr ""
+msgstr "ディスカバリーと選択"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/stork.adoc:69
@@ -172,12 +172,12 @@ msgstr "プロジェクトのブートストラップ"
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:74
 msgid "Create a Quarkus project importing the quarkus-rest-client-reactive and quarkus-resteasy-reactive extensions using your favorite approach:"
-msgstr ""
+msgstr "quarkus-rest-client-reactiveおよびquarkus-resteasy-reactiveエクステンションをインポートして、好きなアプローチでQuarkusプロジェクトを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:80
 msgid "In the generated project, also add the following dependencies:"
-msgstr ""
+msgstr "生成されたプロジェクトに、以下の依存関係を追加します:"
 
 #. type: Block title
 #: upstream/_versions/main/guides/stork.adoc:82
@@ -232,7 +232,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:109
 msgid "Create the `src/main/java/org/acme/services/BlueService.java` with the following content:"
-msgstr ""
+msgstr "以下の内容で `src/main/java/org/acme/services/BlueService.java` を作成してください。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork.adoc:113
@@ -617,7 +617,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:331
 msgid "First, start Consul:"
-msgstr ""
+msgstr "まず、Consulを起動します:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork.adoc:335
@@ -628,7 +628,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:338
 msgid "If you start Consul differently, do not forget to edit the application configuration."
-msgstr ""
+msgstr "Consulを別の方法で起動する場合は、アプリケーションの設定を編集することを忘れないでください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:340
@@ -639,7 +639,7 @@ msgstr "アプリケーションの実行"
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:344
 msgid "And run it:"
-msgstr ""
+msgstr "そして実行します:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork.adoc:348
@@ -694,7 +694,7 @@ msgstr "さらに詳しく"
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:379
 msgid "This guide has shown how to use SmallRye Stork to discover and select your services.  You can find more about Stork in:"
-msgstr ""
+msgstr "このガイドでは、SmallRye Storkを使ってサービスを発見し、選択する方法を紹介しました。Storkについては、以下のページで詳しく紹介しています:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:381
