--- a/l10n/po/ja_JP/_versions/2.2/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/writing-extensions.adoc.po
@@ -719,7 +719,7 @@ msgstr "拡張"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:345
 msgid "This is the first phase, and is done by the <<Build Step Processors>>. These processors have access to Jandex annotation information and can parse any descriptors and read annotations, but should not attempt to load any application classes. The output of these build steps is some recorded bytecode, using an extension of the ObjectWeb ASM project called Gizmo(ext/gizmo), that is used to actually bootstrap the application at runtime. Depending on the `io.quarkus.deployment.annotations.ExecutionTime` value of the `@io.quarkus.deployment.annotations.Record` annotation associated with the build step, the step may be run in a different JVM based on the following two modes."
-msgstr ""
+msgstr "これは最初のフェーズであり、 link:#Build Step Processors[Build Step Processors]によって行われます。これらのプロセッサはJandexのアノテーション情報にアクセスすることができ、任意の記述子を解析してアノテーションを読み取ることができますが、任意のアプリケーションクラスのロードを試みるべきではありません。これらのビルドステップの出力は、Gizmo(ext/gizmo)と呼ばれるObjectWeb ASMプロジェクトのエクステンションを使用して、記録されたバイトコードであり、実行時にアプリケーションを実際にブートストラップするために使用されます。ビルド・ステップに関連する `@io.quarkus.deployment.annotations.Record` アノテーションの `io.quarkus.deployment.annotations.ExecutionTime` 値に応じて、そのステップは以下の2つのモードに基づいて異なるJVMで実行されることがあります。"
 
 #. type: Labeled list
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:346
@@ -730,22 +730,22 @@ msgstr "スタティック初期化"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:352
 msgid "If bytecode is recorded with `@Record(STATIC_INIT)` then it will be executed from a static init method on the main class. For a native executable build, this code is executed in a normal JVM as part of the native build process, and any retained objects that are produced in this stage will be directly serialized into the native executable via an image mapped file.  This means that if a framework can boot in this phase then it will have its booted state directly written to the image, and so the boot code does not need to be executed when the image is started."
-msgstr ""
+msgstr "`@Record(STATIC_INIT)` でバイトコードが記録されている場合は、mainクラスのスタティック初期化メソッドから実行されます。ネイティブビルドの場合、このコードはネイティブビルドプロセスの一部として通常のJVMで実行され、この段階で生成されたリテインドオブジェクトは、イメージマップされたファイルを介してネイティブ実行可能ファイルに直接シリアル化されます。つまり、この段階でフレームワークが起動できれば、そのフレームワークの起動状態がイメージに直接書き込まれるため、イメージの起動時にブートコードを実行する必要がありません。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:354
 msgid "There are some restrictions on what can be done in this stage as the Substrate VM disallows some objects in the native executable. For example you should not attempt to listen on a port or start threads in this phase. In addition, it is disallowed to read run time configuration during static initialization."
-msgstr ""
+msgstr "この段階では、サブストレートVMがネイティブ実行可能ファイルに含まれるいくつかのオブジェクトを許可しないため、実行できる内容にいくつかの制限があります。例えば、この段階でポートのリッスンやスレッドの開始を試みてはいけません。また、スタティック初期化時に実行時設定を読み取ることも禁止されています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:359
 msgid "In non-native pure JVM mode, there is no real difference between Static and Runtime Init, except that Static Init is always executed first. This mode benefits from the same build phase augmentation as native mode as the descriptor parsing and annotation scanning are done at build time and any associated class/framework dependencies can be removed from the build output jar. In servers like WildFly, deployment related classes such as XML parsers hang around for the life of the application, using up valuable memory. Quarkus aims to eliminate this, so that the only classes loaded at runtime are actually used at runtime."
-msgstr ""
+msgstr "非ネイティブのピュアJVMモードでは、スタティック起動とランタイム起動に実質的な違いはありませんが、スタティック起動が常に最初に実行されることが異なります。このモードでは、記述子の解析とアノテーションのスキャンがビルド時に行われ、関連するクラスやフレームワークの依存関係がビルド出力jarから削除されるため、ネイティブモードと同様のビルドフェーズのエクステンションが利用できます。WildFlyのようなサーバーでは、XMLパーサーなどの展開関連クラスがアプリケーションの存続期間中、貴重なメモリを使用してぶら下がっています。Quarkusは、このようなことをなくし、実行時にロードされるクラスのみが実行時に実際に使用されるようにすることを目指しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:362
 msgid "As an example, the only reason that a Quarkus application should load an XML parser is if the user is using XML in their application. Any XML parsing of configuration should be done in the Augmentation phase."
-msgstr ""
+msgstr "例として、QuarkusアプリケーションがXMLパーサーをロードする理由は、ユーザーがアプリケーションでXMLを使用している場合のみです。どの設定のXMLパースも、拡張フェーズで行う必要があります。"
 
 #. type: Labeled list
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:363
@@ -756,22 +756,22 @@ msgstr "ランタイム初期化"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:367
 msgid "If bytecode is recorded with `@Record(RUNTIME_INIT)` then it is executed from the application's main method. This code will be run on native executable boot. In general as little code as possible should be executed in this phase, and should be restricted to code that needs to open ports etc."
-msgstr ""
+msgstr "`@Record(RUNTIME_INIT)` でバイトコードが記録されている場合は、アプリケーションのメインメソッドから実行されます。このコードはネイティブ実行可能ファイルブートで実行されます。一般的に、このフェーズではできるだけ少ないコードを実行すべきであり、ポートを開く必要があるコードなどに限定すべきです。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:369
 msgid "Pushing as much as possible into the `@Record(STATIC_INIT)` phase allows for two different optimizations:"
-msgstr ""
+msgstr "`@Record(STATIC_INIT)` フェーズにできるだけ多くのものを押し込むことで、2つの異なる最適化が可能になります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:371
 msgid "In both native executable and pure JVM mode this allows the app to start as fast as possible since processing was done during build time. This also minimizes the classes/native code needed in the application to pure runtime related behaviors."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルとピュアJVMの両方のモードで、これによりビルド時に処理が行われたため、アプリを可能な限り高速に起動することができます。また、アプリケーションに必要なクラスやネイティブコードを最小限に抑え、純粋な実行時関連の動作を実現します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:374
 msgid "Another benefit with native executable mode is that Substrate can more easily eliminate features that are not used. If features are directly initialized via bytecode, Substrate can detect that a method is never called and eliminate that method. If config is read at runtime, Substrate cannot reason about the contents of the config and so needs to keep all features in case they are required."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルモードのもう一つの利点は、サブストレートが使われない機能をより簡単に排除できることです。機能がバイトコードで直接初期化される場合、Substrateはメソッドが一度も呼ばれていないことを検知し、そのメソッドを削除することができます。また、実行時に設定を読み込む場合、サブストレートは設定の内容を推論することができないため、必要な場合に備えてすべての機能を残しておく必要があります。"
 
 #. type: Title ===
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:376
@@ -797,7 +797,7 @@ msgstr "ネイティブ実行可能ファイルまたはランタイムJVMでエ
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:385
 msgid "You may want to use the `create-extension` mojo of `io.quarkus.platform:quarkus-maven-plugin` to create these Maven modules - see the next section."
-msgstr ""
+msgstr "`io.quarkus:quarkus-maven-plugin` の `create-extension` mojo は、新しい Quarkus エクステンションの実装に必要な Maven モジュールのスタブを生成するために使用できます。次のセクションをご覧ください。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:390
@@ -807,7 +807,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:393
 msgid "By convention the deployment time artifact has the `-deployment` suffix, and the runtime artifact has no suffix (and is what the end user adds to their project)."
-msgstr ""
+msgstr "規約として、デプロイメント時アーティファクトには `-deployment` というサフィックスを付け、実行時アーティファクトにはサフィックスを付けません（エンドユーザーが自分のプロジェクトに追加するものです）。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:403
@@ -866,7 +866,7 @@ msgstr "上記の `maven-compiler-plugin` の設定には、バージョン 3.5+
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:443
 msgid "Under no circumstances can the runtime module depend on a deployment artifact. This would result in pulling all the deployment time code into runtime scope, which defeats the purpose of having the split."
-msgstr ""
+msgstr "いかなる場合でも、実行時モジュールはデプロイメントアーティファクトに依存することはできません。これは、すべてのデプロイメント時のコードが実行時スコープに取り込まれることに繋がり、分割の目的を台無しにします。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:448
@@ -946,12 +946,12 @@ msgstr "将来的には他のレイアウトタイプを導入する可能性が
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:488
 msgid "You may not specify any parameter to use the interactive mode: `mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
-msgstr ""
+msgstr "インタラクティブ・モードを使用する場合は、パラメータを指定する必要はありません: `mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:490
 msgid "As and example, let's add a new extension called `my-ext` to the Quarkus source tree:"
-msgstr ""
+msgstr "例として、 `my-ext` という新しいエクステンションをQuarkusのソースツリーに追加してみましょう:"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:498
@@ -967,7 +967,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:501
 msgid "by default, the `groupId`, `version`, `quarkusVersion`, `namespaceId`, and `namespaceName` will be consistent with other Quarkus core extensions."
-msgstr ""
+msgstr "デフォルトでは、 `groupId`, `version`, `quarkusVersion`, `namespaceId`, `namespaceName` は、他のQuarkusコアエクステンションと一致します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:503
@@ -1027,12 +1027,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:516
 msgid "You also have to fill the `quarkus-extension.yaml` file that describe your extension inside the runtime module `src/main/resources/META-INF` folder."
-msgstr ""
+msgstr "また、実行時モジュールの `src/main/resources/META-INF` フォルダー内の、エクステンションについて説明する `quarkus-extension.yaml` ファイルを記入する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:518
 msgid "This is the `quarkus-extension.yaml` of the `quarkus-agroal` extension, you can use it as an example:"
-msgstr ""
+msgstr "これは、 `quarkus-agroal` エクステンションの `quarkus-extension.yaml` です。手本として使用することができます:"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:532
@@ -1054,30 +1054,30 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:537
 msgid "The `name` parameter of the mojo is optional.  If you do not specify it on the command line, the plugin will derive it from `extensionId` by replacing dashes with spaces and uppercasing each token.  So you may consider omitting explicit `name` in some cases."
-msgstr ""
+msgstr "mojoの `name` パラメータはオプションです。コマンドラインで指定しなかった場合、プラグインは `extensionId` からダッシュをスペースに置き換え、各トークンを大文字にすることで導出します。そのため、場合によっては明示的な `name` を省略することも考えられます。"
 
 #.  The following link should point to the mojo page once https://github.com/quarkusio/quarkusio.github.io/issues/265 is fixed
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:540
 msgid "Please refer to https://github.com/quarkusio/quarkus/blob/{quarkus-version}/devtools/maven/src/main/java/io/quarkus/maven/CreateExtensionMojo.java[CreateExtensionMojo JavaDoc] for all the available options of the mojo."
-msgstr ""
+msgstr "Mojoで使用できるすべてのオプションについては、 link:https://github.com/quarkusio/quarkus/blob/{quarkus-version}/devtools/maven/src/main/java/io/quarkus/maven/CreateExtensionMojo.java[CreateExtensionMojoのJavaDoc]を参照してください。"
 
 #. type: Title ===
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:541
 #, no-wrap
 msgid "Build Step Processors"
-msgstr ""
+msgstr "ビルドステッププロセッサー"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:546
 msgid "Work is done at augmentation time by _build steps_ which produce and consume _build items_.  The build steps found in the deployment modules that correspond to the extensions in the project build are automatically wired together and executed to produce the final build artifact(s)."
-msgstr ""
+msgstr "作業は、 _ビルドアイテム_ を生成・消費する _ビルドステップ_ によって拡張時に行われます。プロジェクトビルドのエクステンションに対応するデプロイメント・モジュール内のビルドステップは、自動的に接続され、最終的なビルドアーティファクトを生成するために実行されます。"
 
 #. type: Title ====
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:547
 #, no-wrap
 msgid "Build steps"
-msgstr ""
+msgstr "ビルドステップ"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:553
@@ -1087,23 +1087,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:556
 msgid "Build steps are normally placed on plain classes within an extension's deployment module.  The classes are automatically instantiated during the augment process and utilize <<injection,injection>>."
-msgstr ""
+msgstr "ビルドステップは通常、エクステンションのデプロイメントモジュール内のプレーンなクラスに配置されます。このクラスは、拡張プロセス中に自動的にインスタンス化され、 link:#injection[インジェクション]を利用します。"
 
 #. type: Title ====
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:558
 #, no-wrap
 msgid "Build items"
-msgstr ""
+msgstr "ビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:564
 msgid "Build items are concrete, final subclasses of the abstract `io.quarkus.builder.item.BuildItem` class.  Each build item represents some unit of information that must be passed from one stage to another.  The base `BuildItem` class may not itself be directly subclassed; rather, there are abstract subclasses for each of the kinds of build item subclasses that _may_ be created: <<simple-build-items,simple>>, <<multi-build-items,multi>>, and <<empty-build-items,empty>>."
-msgstr ""
+msgstr "ビルドアイテムは、abstractな `io.quarkus.builder.item.BuildItem` クラスのfinalな具象サブクラスです。それぞれのビルドアイテムは、あるステージから別のステージに渡す必要のある情報の単位を表します。ベースとなる `BuildItem` クラスは、それ自体を直接サブクラス化することはできません。むしろ、作成 _可能な_ ビルドアイテムのサブクラスの種類（ link:#simple-build-items[シンプル]、 link:#multi-build-items[マルチ]、 link:#empty-build-items[空]）ごとに抽象サブクラスがあります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:566
 msgid "Think of build items as a way for different extensions to communicate with one another.  For example, a build item can:"
-msgstr ""
+msgstr "ビルドアイテムは、異なるエクステンションが相互に通信するための手段と考えてください。例えば、ビルドアイテムは以下のことができます:"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:568
@@ -1113,7 +1113,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:569
 msgid "consume that database configuration (e.g. a connection pool extension or an ORM extension)"
-msgstr ""
+msgstr "データベースの設定を利用する（例：コネクションプールエクステンション、ORMエクステンション）"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:571
@@ -1123,12 +1123,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:573
 msgid "This is a very flexible mechanism."
-msgstr ""
+msgstr "これは非常に柔軟なメカニズムです。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:576
 msgid "`BuildItem` instances should be immutable, as the producer/consumer model does not allow for mutation to be correctly ordered. This is not enforced but failure to adhere to this rule can result in race conditions."
-msgstr ""
+msgstr "`BuildItem` インスタンスはイミュータブルでなければなりません。プロデューサー/コンシューマーモデルでは、ミューテーションを正しく順序付けることができないからです。これは強制されるものではありませんが、このルールに従わないと競合状態になる可能性があります。"
 
 #. type: Title =====
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:578
@@ -1139,7 +1139,7 @@ msgstr "シンプルなビルドアイテム"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:584
 msgid "Simple build items are final classes which extend `io.quarkus.builder.item.SimpleBuildItem`.  Simple build items may only be produced by one step in a given build; if multiple steps in a build declare that they produce the same simple build item, an error is raised.  Any number of build steps may consume a simple build item.  A build step which consumes a simple build item will always run _after_ the build step which produced that item."
-msgstr ""
+msgstr "シンプルビルドアイテムは `io.quarkus.builder.item.SimpleBuildItem` を拡張したfinalクラスです。シンプルビルドアイテムは、特定のビルドにおいて、1つのステップでのみ作成できます。ビルド内の複数のステップが同じシンプルビルドアイテムを生成すると宣言した場合、エラーが発生します。シンプルビルドアイテムを利用するビルドステップは、常にそのアイテムを生成したビルドステップの _後に_ 実行されます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:585
@@ -1193,7 +1193,7 @@ msgstr "マルチビルドアイテム"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:614
 msgid "Multiple or \"multi\" build items are final classes which extend `io.quarkus.builder.item.MultiBuildItem`.  Any number of multi build items of a given class may be produced by any number of steps, but any steps which consume multi build items will only run _after_ every step which can produce them has run."
-msgstr ""
+msgstr "マルチビルドアイテムは、 `io.quarkus.builder.item.MultiBuildItem` を拡張したfinalクラスです。あるクラスのマルチビルドアイテムは、任意の数のステップで、任意の数生成できますが、マルチビルドアイテムを利用するステップは、それらを生成できるすべてのステップが実行された後のみ実行されます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:615
@@ -1359,7 +1359,7 @@ msgstr "空のビルドアイテム"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:727
 msgid "Empty build items are final (usually empty) classes which extend `io.quarkus.builder.item.EmptyBuildItem`.  They represent build items that don't actually carry any data, and allow such items to be produced and consumed without having to instantiate empty classes.  They cannot themselves be instantiated."
-msgstr ""
+msgstr "空のビルドアイテムは、 `io.quarkus.builder.item.EmptyBuildItem` を拡張するfinalの（通常は空の）クラスです。空のビルドアイテムは、実際には何のデータも持たないビルドアイテムを表しており、空のクラスをインスタンス化することなく、そのようなアイテムを生成したり消費したりすることができます。空のクラスは、それ自体をインスタンス化することはできません。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:728
@@ -1379,13 +1379,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:739
 msgid "Empty build items can represent \"barriers\" which can impose ordering between steps.  They can also be used in the same way that popular build systems use \"pseudo-targets\", which is to say that the build item can represent a conceptual goal that does not have a concrete representation."
-msgstr ""
+msgstr "空のビルドアイテムは、ステップ間の順序付けを可能にする「バリア」を表すことができます。また、一般的なビルドシステムが「疑似ターゲット」を使用するのと同じように、空のビルドアイテムを使用することもできます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:740
 #, no-wrap
 msgid "Example of usage of an empty build item in a \"pseudo-target\" style"
-msgstr ""
+msgstr "空のビルドアイテムを「疑似ターゲット」スタイルで使用する例"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:755
@@ -1409,7 +1409,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:757
 #, no-wrap
 msgid "Example of usage of an empty build item in a \"barrier\" style"
-msgstr ""
+msgstr "空のビルドアイテムを \"バリア \"スタイルで使用した例"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:769
@@ -1435,22 +1435,22 @@ msgstr "注入"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:775
 msgid "Classes which contain build steps support the following types of injection:"
-msgstr ""
+msgstr "ビルドステップを含むクラスは、以下のタイプのインジェクションに対応しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:777
 msgid "Constructor parameter injection"
-msgstr ""
+msgstr "コンストラクタパラメータ・インジェクション"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:778
 msgid "Field injection"
-msgstr ""
+msgstr "フィールド・インジェクション"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:779
 msgid "Method parameter injection (for build step methods only)"
-msgstr ""
+msgstr "メソッドパラメータ・インジェクション（ビルドステップ・メソッドの場合のみ）"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:782
