Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-11-23-smallrye-stork-intro.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-11-23-smallrye-stork-intro.adoc.po
@@ -59,8 +59,9 @@ msgstr "先週の link:https://www.youtube.com/watch?v=l3mLKU3wR2A[Quarkus Insig
 
 #. type: Plain text
 #: upstream/_posts/2021-11-23-smallrye-stork-intro.adoc:14
+#, fuzzy
 msgid "This post has been updated to use the `quarkus.` prefix when configuring stork properties. This prefix is required since Quarkus 2.8."
-msgstr ""
+msgstr "この記事は、storkのプロパティを設定する際に、 `quarkus.` プレフィックスを使用するように更新されました。この接頭辞はQuarkus 2.8以降で必要となります。"
 
 #. type: Title ==
 #: upstream/_posts/2021-11-23-smallrye-stork-intro.adoc:15
