Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-02 02:58+0000\n"
+"POT-Creation-Date: 2022-05-05 02:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5214,24 +5214,126 @@ msgstr ""
 msgid "The client secret (from the service account)"
 msgstr ""
 
+#. type: Title ====
+#: upstream/_versions/main/guides/kafka.adoc:2804
+#, no-wrap
+msgid "Binding Red Hat OpenShift managed services to Quarkus application using the Service Binding Operator"
+msgstr ""
+
 #. type: Plain text
-#: upstream/_versions/main/guides/kafka.adoc:2805
-msgid "You will need to include additional configuration"
+#: upstream/_versions/main/guides/kafka.adoc:2808
+msgid "If your Quarkus application is deployed on a Kubernetes or OpenShift cluster with link:https://github.com/redhat-developer/service-binding-operator[Service Binding Operator] and link:https://github.com/redhat-developer/app-services-operator/tree/main/docs[OpenShift Application Services] operators installed, configurations necessary to access Red Hat OpenShift Streams for Apache Kafka and Service Registry can be injected to the application using xref:deploying-to-kubernetes.adoc#service_binding[Kubernetes Service Binding]."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kafka.adoc:2811
+msgid "In order to setup the Service Binding, you need first to connect OpenShift managed services to your cluster.  For an OpenShift cluster you can follow the instructions from link:https://github.com/redhat-developer/app-services-guides/tree/main/docs/registry/service-binding-registry#connecting-a-kafka-and-service-registry-instance-to-your-openshift-cluster[Connecting a Kafka and Service Registry instance to your OpenShift cluster]."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kafka.adoc:2813
+msgid "Once you've connected your cluster with the RHOAS Kafka and Service Registry instances, make sure you've granted necessary permissions to the newly created service account."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kafka.adoc:2816
+msgid "Then, using the xref:deploying-to-kubernetes.adoc#service_binding[Kubernetes Service Binding] extension, you can configure the Quarkus application to generate `ServiceBinding` resources for those services:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kafka.adoc:2820
+#, no-wrap
+msgid "quarkus.kubernetes-service-binding.detect-binding-resources=true\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kafka.adoc:2824
+#, no-wrap
+msgid ""
+"quarkus.kubernetes-service-binding.services.kafka.api-version=rhoas.redhat.com/v1alpha1\n"
+"quarkus.kubernetes-service-binding.services.kafka.kind=KafkaConnection\n"
+"quarkus.kubernetes-service-binding.services.kafka.name=my-kafka\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kafka.adoc:2828
+#, no-wrap
+msgid ""
+"quarkus.kubernetes-service-binding.services.serviceregistry.api-version=rhoas.redhat.com/v1alpha1\n"
+"quarkus.kubernetes-service-binding.services.serviceregistry.kind=ServiceRegistryConnection\n"
+"quarkus.kubernetes-service-binding.services.serviceregistry.name=my-schema-registry\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kafka.adoc:2831
+msgid "For this example Quarkus build will generate the following `ServiceBinding` resources:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kafka.adoc:2851
+#, no-wrap
+msgid ""
+"apiVersion: binding.operators.coreos.com/v1alpha1\n"
+"kind: ServiceBinding\n"
+"metadata:\n"
+"  name: my-app-kafka\n"
+"spec:\n"
+"  application:\n"
+"    group: apps.openshift.io\n"
+"    name: my-app\n"
+"    version: v1\n"
+"    kind: DeploymentConfig\n"
+"  services:\n"
+"    - group: rhoas.redhat.com\n"
+"      version: v1alpha1\n"
+"      kind: KafkaConnection\n"
+"      name: my-kafka\n"
+"  detectBindingResources: true\n"
+"  bindAsFiles: true\n"
+"---\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kafka.adoc:2869
+#, no-wrap
+msgid ""
+"apiVersion: binding.operators.coreos.com/v1alpha1\n"
+"kind: ServiceBinding\n"
+"metadata:\n"
+"  name: my-app-serviceregistry\n"
+"spec:\n"
+"  application:\n"
+"    group: apps.openshift.io\n"
+"    name: my-app\n"
+"    version: v1\n"
+"    kind: DeploymentConfig\n"
+"  services:\n"
+"    - group: rhoas.redhat.com\n"
+"      version: v1alpha1\n"
+"      kind: ServiceRegistryConnection\n"
+"      name: my-schema-registry\n"
+"  detectBindingResources: true\n"
+"  bindAsFiles: true\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kafka.adoc:2873
+msgid "You can follow xref:deploying-to-kubernetes.adoc#openshift[Deploying to OpenShift] to deploy your application, including generated `ServiceBinding` resources.  The configuration properties necessary to access the Kafka and Schema Registry instances will be injected to the application automatically at deployment."
 msgstr ""
 
 #. type: Title ==
-#: upstream/_versions/main/guides/kafka.adoc:2806
+#: upstream/_versions/main/guides/kafka.adoc:2874
 #, no-wrap
 msgid "Going further"
 msgstr "さらに詳しく"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kafka.adoc:2810
+#: upstream/_versions/main/guides/kafka.adoc:2878
 msgid "This guide has shown how you can interact with Kafka using Quarkus.  It utilizes SmallRye Reactive Messaging to build data streaming applications."
 msgstr "このガイドでは、Quarkus を使用して Kafka とやりとりする方法を示しました。SmallRye Reactive Messaging を利用して、データストリーミングアプリケーションを構築します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kafka.adoc:2811
+#: upstream/_versions/main/guides/kafka.adoc:2879
 msgid "If you want to go further, check the documentation of https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging], the implementation used in Quarkus."
 msgstr "詳細は、Quarkus で使用される実装 https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging] のドキュメントを確認してください。"
 
