--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-12 02:33+0000\n"
+"POT-Creation-Date: 2022-05-05 02:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5976,7 +5976,9 @@ msgstr "`name`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:3129
-msgid "`description` (unless you have it already set in the `runtime/pom.xml`'s `<description>` element, which is the recommended approach)"
+#, fuzzy
+#| msgid "`description` (unless you have it already set in the `runtime/pom.xml`'s `<description>` element, which is the recommended approach)"
+msgid "`description` (unless you have it already set in the ``runtime/pom.xml``'s `<description>` element, which is the recommended approach)"
 msgstr "`description` (推奨されるアプローチである、 `runtime/pom.xml` の `<description>` 要素にセット、がされていない限り)"
 
 #. type: Plain text
