Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc.po
@@ -103,7 +103,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc:38
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc:43
