--- a/l10n/po/ja_JP/_versions/main/guides/stork-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork-kubernetes.adoc.po
@@ -28,12 +28,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:17
 msgid "The essence of distributed systems resides in the interaction between services.  In modern architecture, you often have multiple instances of your service to share the load or improve the resilience by redundancy.  But how do you select the best instance of your service? That's where https://smallrye.io/smallrye-stork[SmallRye Stork] helps.  Stork is going to choose the most appropriate instance.  It offers:"
-msgstr ""
+msgstr "分散システムの本質は、サービス間の相互作用にあります。現代のアーキテクチャでは、負荷を共有したり、冗長性によって回復力を高めたりするために、サービスの複数のインスタンスを持つことがよくあります。しかし、サービスの最適なインスタンスをどのように選択すればよいのでしょうか？そこで、 link:https://smallrye.io/smallrye-stork[SmallRye Stork]がお役に立ちます。Storkが最適なインスタンスを選択してくれます。次の機能を提供します:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:19
 msgid "Extensible service discovery mechanisms"
-msgstr ""
+msgstr "拡張可能なサービスディスカバリーメカニズム"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:20
@@ -43,24 +43,24 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:21
 msgid "Customizable client load-balancing strategies"
-msgstr ""
+msgstr "カスタマイズ可能なクライアントロードバランシング戦略"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:24
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:29
 msgid "Access to a Kubernetes cluster (Minikube is a viable option)"
-msgstr ""
+msgstr "Kubernetesクラスターへのアクセス（Minikubeは有効な選択肢です）"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:30
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:33
@@ -91,7 +91,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:39
 #, no-wrap
 msgid "Architecture of the application"
-msgstr ""
+msgstr "アプリケーションのアーキテクチャ"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:39
@@ -108,7 +108,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:43
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:47
@@ -118,7 +118,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:49
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:51
@@ -129,7 +129,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:52
 #, no-wrap
 msgid "Discovery and selection"
-msgstr ""
+msgstr "ディスカバリーとセレクション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:55
@@ -155,23 +155,23 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:67
 #, no-wrap
 msgid "Bootstrapping the project"
-msgstr ""
+msgstr "プロジェクトのブートストラップ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:70
 msgid "Create a Quarkus project importing the quarkus-rest-client-reactive and quarkus-resteasy-reactive extensions using your favorite approach:"
-msgstr ""
+msgstr "quarkus-rest-client-reactiveおよびquarkus-resteasy-reactiveエクステンションをインポートして、好きなアプローチでQuarkusプロジェクトを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:76
 msgid "In the generated project, also add the following dependencies:"
-msgstr ""
+msgstr "生成されたプロジェクトに、以下の依存関係を追加します:"
 
 #. type: Block title
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:78
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:100
@@ -203,7 +203,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:103
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:110
@@ -601,6 +601,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:368
@@ -794,12 +798,12 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:471
 #, no-wrap
 msgid "Going further"
-msgstr ""
+msgstr "さらに詳しく"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:475
 msgid "This guide has shown how to use SmallRye Stork to discover and select your services.  You can find more about Stork in:"
-msgstr ""
+msgstr "このガイドでは、SmallRye Storkを使ってサービスを発見し、選択する方法を紹介しました。Storkについては、以下のページで詳しく紹介しています:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:477
@@ -814,4 +818,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-kubernetes.adoc:478
 msgid "the https://smallrye.io/smallrye-stork[SmallRye Stork website]."
-msgstr ""
+msgstr "the https://smallrye.io/smallrye-stork[SmallRye Stork website]."
